# pyPPC

./: .gitignore  CHEATSHEET.md  README.md  latest_version  pyproject.toml
cli/ppc_cli/: __init__.py  main.py
cli/ppc_cli/commands/: __init__.py  convert.py  env.py  format.py  get.py  init.py  validate.py
cli/ppc_cli/i18n/: __init__.py  en.py  ja.py
examples/: api_server.ppc  bot_config.ppc  full_features.ppc  game_server.ppc  iot_smarthome.ppc  microservice.ppc  minimal.ppc  ml_pipeline.ppc  scraper.ppc  slack_bot.ppc  web_app.ppc
lib/ppc/: __init__.py  cli.py  config.py  evaluator.py  exceptions.py  lexer.py  parser.py  secrets.py  types.py
vsc-ppc-plugin/: LICENSE.md  README.md  language-configuration.json  package.json
vsc-ppc-plugin/snippets/: ppc.json
vsc-ppc-plugin/syntaxes/: ppc.tmLanguage.json
